--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <div id="game-area"></div>
             <button class="restart-button" onclick="initGame()">Start New Game</button>
         </div>
+        <button class="restart-button">Open mo 'to blyy sa valentines</button>
     </div>
 
     <div class="congratulations">
@@ -49,5 +50,6 @@
         <button class="restart-button" onclick="hideCongratulations()">Play Again</button>
     </div>
     <script src="index.js"></script>
+    <script src="velentines.js"></script>
 </body>
 </html>
